# Cap

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json
app/: CMakeLists.txt  MainLoop.cpp  MainLoop.h  Setup.cpp  Setup.h  main.cpp  pch.h
cmake/: FindGLEW.cmake  FindGLFW3.cmake  FindGLI.cmake  FindGLM.cmake  FindSDL.cmake  FindSDL_Mixer.cmake  MakeModule.cmake
game/: CMakeLists.txt  Game.cpp  GameObject.cpp  GameState.cpp  Grapher.cpp  Merger.cpp  Renderer.cpp  WorldGrid.cpp
game/include/game/: Game.h  GameObject.h  GameState.h  Grapher.h  Merger.h  Renderer.h  Signature.h  Test.h  WorldGrid.h
game/include/game/player/: Inventory.h  PlayerInfo.h
game/include/game/ui/game_control/: EntityInterface.h
game/player/: Inventory.cpp
game/ui/: ConstructDebugUI.cpp
game/ui/game_control/: EntityInterface.cpp
rangles/: CMakeLists.txt  main.cpp  rangles.cpp
rangles/include/rangles/: rangles.h
render/: CMakeLists.txt  PixelRenderer.cpp  Renderer.cpp
render/include/render/: PixelRenderer.h
render/include/render/infos/: BlitRenderInfo.h
render/infos/: BlitRenderInfo.cpp
render/shaders/: Pixel.frag  Pixel.vert
resources/graphics/: abomination.dds
resources/sound/: button.oga  hover.oga
scripts/: meta.py  meta_impl.py
src/: main.cpp
templates/: CMakeLists.txt
templates/include/templates/: Everything.h
