# CMakeList.txt : CMake PROJECT for Game, include source and define
# PROJECT specific logic here.
#
CMAKE_MINIMUM_REQUIRED(VERSION 3.16)

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/")

FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(GLM REQUIRED)
FIND_PACKAGE(GLFW3 REQUIRED)
FIND_PACKAGE(GLEW REQUIRED)
FIND_PACKAGE(GLI REQUIRED)

# SET(CMAKE_CXX_STANDARD 17)
# SET(CMAKE_CXX_STANDARD_REQUIRED ON)

PROJECT(game LANGUAGES CXX)

# ADD_EXECUTABLE(${PROJECT_NAME} main.cpp "ui/src/UI.cpp")

add_subdirectory(ui)

add_subdirectory(app)

# TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE src)
# TARGET_COMPILE_FEATURES(${PROJECT_NAME} PRIVATE cxx_std_17)
# SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES CXX_EXTENSIONS OFF)

